2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* src/binarization/kim.cc: Remove debug and useless steps.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* src/binarization/kim.cc: New binarization algorithm.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Introduce a verbose mode.

	* scribo/binarization/internal/sauvola_ms_functor.hh,
	* scribo/binarization/sauvola_ms.hh: Remove debug.

	* src/binarization/otsu.cc,
	* src/binarization/sauvola.cc: Add verbose mode option.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve Sauvola.

	* sauvola_fast.cc: Remove.

	* scribo/binarization/internal/local_threshold_debug.hh: Add more
	debug.

	* scribo/binarization/internal/sauvola_ms_functor.hh,
	* scribo/binarization/sauvola_ms.hh: Introduce k for each scale.

	* src/binarization/Makefile.am,
	* src/binarization/sauvola_ms.cc,
	* src/binarization/sauvola_ms_debug.cc,
	* src/binarization/sauvola_ms_split.cc: Take several k into
	account.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Add Wolf's binarization algorithm.

	* scribo/binarization/internal/wolf_formula.hh,
	* scribo/binarization/internal/wolf_functor.hh,
	* scribo/binarization/wolf.hh,
	* scribo/util/integral_sum_sum2_global_min_functor.hh,
	* src/binarization/wolf.cc,
	* tests/binarization/wolf.cc,
	* tests/binarization/wolf.ref.pbm,
	* tests/binarization/wolf_weven_hodd.ref.pbm,
	* tests/binarization/wolf_wodd_heven.ref.pbm,
	* tests/binarization/wolf_wodd_hodd.ref.pbm: New.

	* src/binarization/Makefile.am,
	* tests/binarization/Makefile.am: Add new target.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Add more debug.

	* scribo/binarization/internal/local_threshold_debug.hh,
	* scribo/binarization/internal/sauvola_ms_functor.hh,
	* scribo/binarization/sauvola_ms.hh,
	* src/binarization/sauvola_ms_debug.cc: Here.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/binarization/sauvola_ms.hh: Change area thresholds.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>
